# MoMos-reproduction

./: LICENSE  pyproject.toml
note/: 2026-04-13.md  2026-04-14.md  2026-04-15.md
notebook/: analysis.ipynb  analysis.py  analysis_multiple.py  momos2d_analysis.py  swapping_analysis.py
scripts/: run_sweeps.sh
src/: train.py
src/configs/: config.yaml
src/configs/dataset/: cifar10.yaml  fashion_mnist.yaml  mnist.yaml
src/configs/model/: mlp.yaml
src/configs/runtime/: cpu.yaml  cuda.yaml  mps.yaml
src/data/: __init__.py  datamodule.py  util.py
src/model/: __init__.py  lit_module.py  mlp.py
src/quantizers/: __init__.py  block_utils.py  fake_quant.py  momos.py  momos2d.py
src/utils/: callbacks.py  init.py  io_model.py  metrics.py
src/view/: __init__.py  compression_metrics.py  fetch_log.py  figure.py  report.py  weight_distribution.py
tests/: old_metrics.py  test_block_utils.py  test_blocks_utils2d.py  test_compression_metrics.py  test_fake_quant.py  test_metrics.py  test_quant.py
